--- a/distributions/turtle/documentation/running.html
+++ b/distributions/turtle/documentation/running.html
@@ -109,7 +109,7 @@
                 <i>To boot a live-usb on a usb 1.1 system, you will need a live cdrom that contains the appropriate grub.</i><br>
                 <br>
                 <span class="bold">Available Boot Options:</span><br>
-                <code><span class="notice">
+                <code class="code"><span class="notice">
                   &nbsp;&nbsp;&nbsp;Install Kevux System<br>
                   &nbsp;&nbsp;&nbsp;Boot Live System - Run From Memory<br>
                   &nbsp;&nbsp;&nbsp;Boot Live System - Run From CD-Rom<br>
@@ -258,25 +258,25 @@
                     <li id="boot_option_etcdevice"><span class="bold notice">etcdevice=</span><br>
                       Specify the physical partition that contains the etc directory.<br>
                       This will be mounted to the /etc directory of the finalroot system.<br>
-                      For using an ecrypted partition, this should be set to something like: <code>etcdevice=/dev/mapper/etc</code><br>
+                      For using an ecrypted partition, this should be set to something like: <code class="code">etcdevice=/dev/mapper/etc</code><br>
                       <br>
                     </li>
                     <li id="boot_option_homedevice"><span class="bold notice">homedevice=</span><br>
                       Specify the physical partition that contains the home directory.<br>
                       This will be mounted to the /home directory of the finalroot system.<br>
-                      For using an ecrypted partition, this should be set to something like: <code>homedevice=/dev/mapper/home</code><br>
+                      For using an ecrypted partition, this should be set to something like: <code class="code">homedevice=/dev/mapper/home</code><br>
                       <br>
                     </li>
                     <li id="boot_option_vardevice"><span class="bold notice">vardevice=</span><br>
                       Specify the physical partition that contains the var directory.<br>
                       This will be mounted to the /var directory of the finalroot system.<br>
-                      For using an ecrypted partition, this should be set to something like: <code>vardevice=/dev/mapper/var</code><br>
+                      For using an ecrypted partition, this should be set to something like: <code class="code">vardevice=/dev/mapper/var</code><br>
                       <br>
                     </li>
                     <li id="boot_option_tmpdevice"><span class="bold notice">tmpdevice=</span><br>
                       Specify the physical partition that contains the tmp directory.<br>
                       This will be mounted to the /tmp directory of the finalroot system.<br>
-                      For using an ecrypted partition, this should be set to something like: <code>tmpdevice=/dev/mapper/tmp</code><br>
+                      For using an ecrypted partition, this should be set to something like: <code class="code">tmpdevice=/dev/mapper/tmp</code><br>
                       <br>
                     </li>
                     <li id="boot_option_xorg"><span class="bold notice">xorg=</span><br>
