--- a/documentation/fss_basic_write.html
+++ b/documentation/fss_basic_write.html
@@ -168,10 +168,10 @@
                 </table>
               </div>
               <p>
-                The <code>+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code>+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code>+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p>
-                The <code>+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
+                The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
           </section>
@@ -257,10 +257,10 @@
                 For the pipe, an Object is terminated by either a Backspace character '<kbd>\b</kbd>' (U+0008) or a Form Feed character '<kbd>\f</kbd>' (U+000C). The end of the pipe represents the end of any Object or Content.
               </p>
               <p>
-                The FSS-0000 (Basic) specification does not support multi-line Content, therefore the parameter <code>--prepend</code> does nothing.
+                The FSS-0000 (Basic) specification does not support multi-line Content, therefore the parameter <code class="code">--prepend</code> does nothing.
               </p>
               <p>
-                This program does not use the parameter <code>--ignore</code>, which therefore does nothing. This parameter requires two values.
+                This program does not use the parameter <code class="code">--ignore</code>, which therefore does nothing. This parameter requires two values.
               </p>
             </div>
           </section>
