--- a/fll.html
+++ b/fll.html
@@ -57,6 +57,9 @@
           <div class="nav-item block">
             <a href="fll.html#release" class="nav-text link">Current Release</a>
           </div>
+          <div class="nav-item block">
+            <a href="fll/specifications.html" class="nav-text link">Specifications</a>
+          </div>
           <div class="nav-item block ellipses">
             <a href="fll.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
             <a href="fll.html" class="nav-text link close">Collapse Menu</a>
