--- a/projects.html
+++ b/projects.html
@@ -158,7 +158,7 @@
             </header>
             <div class="article-content">
               <p>
-                This tool is a nifty way to get a <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> friendly <code>hexdump</code> alternative.<br>
+                This tool is a nifty way to get a <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> friendly <code class="code">hexdump</code> alternative.<br>
                 The output is intended to honor some of the feel of hexdump but do so in an <abbr title="Featureless Linux Library">FLL</abbr> way.
               </p>
             </div>
@@ -187,7 +187,7 @@
               </p>
               <p>
                 The goal of this is to provide task and service management similar to sysvinit, initng, and systemd.<br>
-                This is designed to be used for booting the system as if it were <code>/sbin/init</code>.
+                This is designed to be used for booting the system as if it were <code class="code">/sbin/init</code>.
               </p>
               <p>
                 This should be controllable from user-space via the "Control" program.
@@ -439,7 +439,7 @@
                 The status codes are converted to or from a code and a label.
               </p>
               <p>
-                This program handles more status codes that the <code>status_code</code> program.
+                This program handles more status codes that the <code class="code">status_code</code> program.
               </p>
             </div>
           </article>
@@ -472,7 +472,7 @@
               <p>
                 The IKI settings specification plays on how it is simpler than a Wiki syntax.<br>
                 The IKI could be used for anything from e-mails and text-messages to word-processors.<br>
-                The goal with IKI is to be very easily readably by a human, such as: <code>iki:"example"</code> or <code>url:"https://sourceforge.net/projects/fll/"</code>.
+                The goal with IKI is to be very easily readably by a human, such as: <code class="code">iki:"example"</code> or <code class="code">url:"https://sourceforge.net/projects/fll/"</code>.
               </p>
               <p>
                 This program is a swiss army knife for reading files that contain IKI syntax.
@@ -492,7 +492,7 @@
               <p>
                 The IKI settings specification plays on how it is simpler than a Wiki syntax.<br>
                 The IKI could be used for anything from e-mails and text-messages to word-processors.<br>
-                The goal with IKI is to be very easily readably by a human, such as: <code>iki:"example"</code> or <code>url:"https://sourceforge.net/projects/fll/"</code>.
+                The goal with IKI is to be very easily readably by a human, such as: <code class="code">iki:"example"</code> or <code class="code">url:"https://sourceforge.net/projects/fll/"</code>.
               </p>
               <p>
                 This program is a swiss army knife for writing files that contain IKI syntax.
