--- a/documentation/byte_dump.html
+++ b/documentation/byte_dump.html
@@ -168,10 +168,10 @@
                 </table>
               </div>
               <p>
-                The <code>+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code>+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code>+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p>
-                The <code>+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
+                The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
           </section>
@@ -267,7 +267,7 @@
               <ol>
                 <li>The first part, on the left mode side of the output, contains 16 upper case hexidecimal digits representing the maximum length supported by the <strong>byte_dump</strong> program.</li>
                 <li>The second part displays the individual bytes in a numeric format or similar (depending on parameters). In the second part, the hexidecimal digits are never swapped based on endianness.</li>
-                <li>The third part, which only appears when using the <code>-t/--text<code> parameter, displays the character each digit or set of digits may represent. Any characters considered unsafe or improper are substituted with a replacement character.</li>
+                <li>The third part, which only appears when using the <code class="code">-t/--text<code class="code"> parameter, displays the character each digit or set of digits may represent. Any characters considered unsafe or improper are substituted with a replacement character.</li>
               </ol>
             </div>
           </section>
