--- a/documentation/controller.html
+++ b/documentation/controller.html
@@ -183,10 +183,10 @@
                 </table>
               </div>
               <p>
-                The <code>+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code>+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code>+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
+                The <code class="code">+q/++quiet</code> parameter silences all output that is not the intent and purpose of the program. For example, the purpose of the <strong>utf8</strong> program is to print the Unicode code point or the <abbr title="Unicode Transformation Format 8-bit">UTF-8</abbr> byte code. The <code class="code">+q/++quiet</code> will not suppress this output. The new line printed at the end of the program, is however, not printed. The <code class="code">+q/++quiet</code> is ideal for using in scripting to help guarantee more consistent and controlled output.
               </p>
               <p>
-                The <code>+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
+                The <code class="code">+n/++no_color</code> simplifies the output to avoid the special color character codes. The special color character codes tend to take up a lot of extra space and may slow down printing performance.
               </p>
             </div>
           </section>
@@ -262,13 +262,13 @@
                 </table>
               </div>
               <p>
-                When both the <code>--simulate</code> parameter and the <code>--validate</code> parameter are specified, then additional information on each would be executed rule is printed but no simulation is performed.
+                When both the <code class="code">--simulate</code> parameter and the <code class="code">--validate</code> parameter are specified, then additional information on each would be executed rule is printed but no simulation is performed.
               </p>
               <p>
-                The default interrupt behavior is to operate as if the <code>--interruptible</code> parameter is passed.
+                The default interrupt behavior is to operate as if the <code class="code">--interruptible</code> parameter is passed.
               </p>
               <p>
-                Specify an empty string for the <code>--pid</code> parameter to disable pid file creation for this program.
+                Specify an empty string for the <code class="code">--pid</code> parameter to disable pid file creation for this program.
               </p>
             </div>
           </section>
